# llm-business-pain-point-finder

./: README.md  pyproject.toml  requirements.txt
src/: ai_utils.py  main.py
